Correction width nav when stuck

--- a/style.css
+++ b/style.css
@@ -251,7 +251,6 @@ nav {
     z-index: 9000;
 }
 .sticked-nav .titleGroup{
-    width: 50%;
     border-radius: 50px;
 }
 .sticked-nav .slider {
